--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Dress</string>
+    <string name="app_name">最美新娘</string>
 
     <!--activity_main.xml-->
     <string name="main_redio_btn_1">首页</string>
@@ -22,7 +22,7 @@
     </array>
 
     <!--fragment_owner.xml-->
-    <string name="owner_title">Dress</string>
+    <string name="owner_title">最美新娘</string>
     <string name="owner_subtitle">轻松注册，即可永久保存你的所爱\n换了手机也找得到哦</string>
     <string name="btn_registe">注册</string>
     <string name="owner_has_account">已有帐号？<u>点击登陆</u></string>
